# libslirc

./: CMakeLists.txt  main.cpp
include/slirc/: entry.hpp  event.hpp  event_id.hpp  irc.hpp  module.hpp  network.hpp
include/slirc/apis/: connection.hpp
include/slirc/modules/: connection.hpp
include/slirc/util/: component_map.hpp  spin_lock.hpp
src/: entry.cpp  event.cpp  event_id.cpp  irc.cpp  module.cpp  network.cpp
src/apis/: connection.cpp
src/modules/: connection.cpp
src/util/: component_map.cpp  spin_lock.cpp
